# logic_circuits

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt,
src/logic_circuits/: __init__.py
src/logic_circuits.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/logic_circuits/gates/: gates.py  port.py
src/logic_circuits/pygame_representation/: __init__.py  button.py  colors.py  custom_gate.py  fonts.py  gates_graphical.py  library.py  main.ipynb  ports.py  pygame_cfg.py  utils.py  wires.py
src/logic_circuits/utils/: __init__.py  base_classes.py  pygame_config.py
tests/: conftest.py
tests/pygame_representation/: test_gates_graphical.py
